# PGMLib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
example/: blur.c  echo.c  edges.c  median.c  sharpen.c
res/kernel/: blur.pgm  sharp.pgm
src/filter/: filter.c  filter.h
src/filter/edge/: cannyFilter.c  cannyFilter.h  edgeFilter.c  edgeFilter.h  nmsFilter.c  nmsFilter.h  prewittFilter.c  prewittFilter.h  robertsFilter.c  robertsFilter.h  sobelFilter.c  sobelFilter.h
src/filter/linear/: blurFilter.c  blurFilter.h  normalizeFilter.c  normalizeFilter.h  sharpFilter.c  sharpFilter.h
src/filter/nonlinear/: maxFilter.c  maxFilter.h  medianFilter.c  medianFilter.h  minFilter.c  minFilter.h  quantizeFilter.c  quantizeFilter.h  thresholdFilter.c  thresholdFilter.h
src/pgm/: pgm.c  pgm.h
